fix(editor): missing scrollbars

--- a/apps/skysteel-tools/src/app/pages/editor/editor/editor.component.less
+++ b/apps/skysteel-tools/src/app/pages/editor/editor/editor.component.less
@@ -5,11 +5,6 @@
   height: 100%;
 }
 
-.explorer-container {
-  max-height: 100%;
-  overflow: hidden;
-}
-
 .editor-container {
   height: 100%;
 }
